Fixed entity cast exception